--- a/_quarto.yml
+++ b/_quarto.yml
@@ -323,6 +323,9 @@ format:
     code-tools: true
     code-overflow: wrap
     code-line-numbers: false
+    lightbox:
+      match: auto
+      loop: false
     grid:
       sidebar-width: 250px
       body-width: 900px
