--- a/.github/workflows/quarto-gh-pages-html.yaml
+++ b/.github/workflows/quarto-gh-pages-html.yaml
@@ -26,6 +26,9 @@ jobs:
           sudo apt-get update -y && sudo apt-get install -y libcurl4-openssl-dev
           sudo apt-get install -y libharfbuzz-dev 
           sudo apt-get install -y libfribidi-dev
+          sudo apt-get install -y libglpk-dev
+          sudo apt-get install -y libgmp3-dev
+          sudo apt-get install -y libxml2-dev
           
       - uses: r-lib/actions/setup-renv@v2
 
