--- a/_quarto.yml
+++ b/_quarto.yml
@@ -11,6 +11,7 @@ website:
   google-analytics: "G-50FV9HPTRE"
   repo-actions: [edit]  
   repo-url: https://github.com/3mmaRand/comp4biosci
+  open-graph: true
 
   other-links:
     - text: "Make a suggestion"
